--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <h2 class="text-center mb-4 text-white">My Projects</h2>
     <div id="project-container" class="row g-4 justify-content-center"></div>
     <h2 class="text-center mb-4 text-white">To know more about my projects visit my Github profile. To know about my achievements, licences and certifications visit my LinkedIn profile.</h2>
-    <h2 class="text-center mb-4 text-white"><a href="https://drive.google.com/file/d/1kAiX22FwA4xEKQy-f5upPm8fvs1oLZoo/view?usp=drive_link">Take a look at my resume</a></h2>
+    <h2 class="text-center mb-4 text-white"><a href="https://drive.google.com/file/d/1VGAnLtj97wh3DusBbe0oDgUpvX21VAPj/view?usp=sharing">Take a look at my resume</a></h2>
   </div>
   
 </section>
